package main.View.GestionDePublicaciones;

public class VistaDePublicacion {
    
}
